clusters/management/rancher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/issuer: letsencrypt-dns
    cert-manager.io/issuer-kind: ClusterIssuer
    external-dns.alpha.kubernetes.io/hostname: rancher.kng.house
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rancher.kng.house
      secretName: tls-rancher-ingress
  rules:
    - host: rancher.kng.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 443
